<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChromeADB</string>
    <string name="action_settings">Settings</string>
    <string name="title_help">Help</string>
    <string name="title_info">Information</string>
    <string name="help_what_is">What is ChromeADB</string>
    <string name="info_version">Version</string>
    <string name="info_feedback">Feedback</string>
    <string name="info_license">License</string>
    <string name="chromeadb_gmail">chromeadb@gmail.com</string>
    <string name="feedback_subject">[ChromeADB for Android] feedback</string>
    <string name="feedback_error_msg">There are no email clients.</string>
    <string name="feedback_type">message/rfc822</string>
    <string name="info_send_feedback">Send feedback</string>
    <string name="info_oss_license">Open-source licenses</string>
    <string name="apache_commons_io">Apache Commons IO</string>
    <string name="help_title">ChromeADB for Android</string>
    <string name="help_desc">is helper of ChromeADB on Chrome.</string>
    <string name="help_desc1">This app is for Android Developers.\nCurrently, this app only shows a mouse cursor.</string>
    <string name="help_desc2">* See <![CDATA[<a href=\"https://github.com/importre/chromeadb\">ChromeADB</a>]]></string>
    <string name="send_feedback">Send feedback</string>

</resources>
