<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_version" />

            <Button
                tools:text="0.1.0 (Build 1)"
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_height"
                android:background="@drawable/selector" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_feedback" />

            <Button
                android:id="@+id/feedback"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_height"
                android:background="@drawable/selector"
                android:text="@string/info_send_feedback" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_license" />

            <Button
                android:id="@+id/license"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_height"
                android:background="@drawable/selector"
                android:text="@string/info_oss_license" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
